--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -74,3 +74,24 @@
     margin-bottom: 20px;
   }
 }
+
+.custom-url-checkbox {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.code-input {
+  width: 100%;
+  max-width: 200px;
+  height: 50px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  border-radius: 4px;
+}
+
+.copyable-text {
+  max-width: 200px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  font-size: large;
+}
